SOLR-17321:  Remove Deprecated URL ctors in Preparation for Java 21 (#2501)
* Switch to URI 
* Added URL to the forbidden API 

-------------

Co-authored-by:  Uwe Schindler <uschindler@apache.org>
Co-authored-by: David Smiley <dsmiley@apache.org>